--- a/css/main.css
+++ b/css/main.css
@@ -50,3 +50,12 @@ body{
   padding: 15px;
   padding-top: 10px;
 }
+.tile{
+  padding: 90px 40px 90px 40px;
+  text-align: center;
+  background-color: #e74c3c;
+  color: white;
+}
+a:hover{
+  text-decoration: none;
+}
